Fix navbar at the bottom of page on mobile

--- a/public_html/stylesheet.css
+++ b/public_html/stylesheet.css
@@ -136,7 +136,7 @@ button li img{
 }
 
 #footer-home {
-	position: absolute;
+	position: fixed;
 	bottom: 0;
 	width: 100%;
 	height: 35px;
@@ -361,6 +361,7 @@ animation-duration: 2s;
 	margin: 0 auto;
 	text-align: center;
 	margin-top: 110px;
+	margin-bottom: 60px;
 }
 
 .projects-mobile h2 {
